--- a/nemacs.org
+++ b/nemacs.org
@@ -451,8 +451,19 @@
     В последнее время редактировал и писал много кода на Vala и, похоже, в будущем еще предстоит, поэтому решил перенести из локального конфига в глобальный.
 
     #+begin_src emacs-lisp
+      (defun lsp-register-vala-backend ()
+        "Register vala-language-server-alpha lsp backend"
+        (add-to-list 'lsp-language-id-configuration '(vala-mode . "vala"))
+
+        (lsp-register-client
+         (make-lsp-client :new-connection (lsp-stdio-connection "vala-language-server")
+                          :major-modes '(vala-mode)
+                          :server-id 'vala-language-server)))
+
       (use-package vala-mode
-        :ensure    t)
+        :ensure    t
+        :hook      (vala-mode . lsp)
+        :config    (lsp-register-vala-backend))
     #+end_src
 
     Т. к. в Vala принято использовать [[https://mesonbuild.com/][Meson]] для сборки проекта, подключение соответствующего режима положу сюда.
