add untabify-buffer and group-empty-lines helper functions

--- a/nemacs.org
+++ b/nemacs.org
@@ -361,6 +361,27 @@
               (markdown-mode-hook . flyspell-mode)))
    #+end_src
 
+** Untabify для всего буфера
+
+   По дефолту untabify работает для выделенной области или текущей строки, что неудобно, когда нужно заменить табы на пробелы во всем буфере.
+
+   #+begin_src emacs-lisp
+     (defun untabify-buffer ()
+       (interactive)
+       (untabify (point-min) (point-max)))
+   #+end_src
+
+** Нормализация вертикальных отступов
+
+   Когда я вижу оставленные вертикальные отступы по 10 строк в коде, мне хочется отправиться домой к автору коммита для разъяснительной беседы. Ну и для недопущения подобного у себя, удобно использовать в =before-save-hook=.
+
+   #+begin_src emacs-lisp
+     (defun group-empty-lines ()
+       (interactive)
+       (save-excursion
+         (replace-regexp "^\n\n*$" "" nil (point-min) (point-max) t)))
+   #+end_src
+
 ** Режимы для различных языков программирования и разметки
 
    За пару месяцев их набирается полтора-два десятка, так что буду добавлять по мере использования.
