conditional use set-default-font (for Emacs 27)
seems like there's no set-default-font function in Emacs 27 (at least
by default, when I've built it from source)

--- a/nemacs.org
+++ b/nemacs.org
@@ -150,7 +150,9 @@
 
    #+begin_src emacs-lisp
      (let ((default-font "JetBrains Mono Light 13"))
-       (set-default-font default-font)
+       (if (functionp #'set-default-font)
+           (set-default-font default-font)
+         (set-frame-font default-font))
        (add-to-list 'default-frame-alist `(font . ,default-font)))
    #+end_src
 
