rename snippets folder to yas-snippets to prevent collisions

--- a/nemacs.org
+++ b/nemacs.org
@@ -286,7 +286,9 @@
 
    Современные языки и фреймворки, вроде как, сильно сократили количество бойлерплейт-кода. Но, во-первых, не до нуля, а во-вторых, не все.
 
-   Добавляем директорию =snippets= в список директорий для поиска сниппетов. Поскольку она добавляется в начало списка, она же будет путем сохранения для сниппетов, добавляемых с помощью =yas-new-snippet=.
+   Добавляем директорию =yas-snippets= в список директорий для поиска сниппетов. Поскольку она добавляется в начало списка, она же будет путем сохранения для сниппетов, добавляемых с помощью =yas-new-snippet=.
+
+   Раньше каталог назывался просто =snippets=, но это имя конфликтует с каталогом, создаваемым пакетом =yasnippet-snippets= по пути =~/.emacs.d/=.
 
    #+begin_src emacs-lisp
      (use-package yasnippet
@@ -294,7 +296,7 @@
        :diminish yas-minor-mode
        :config
        (progn
-         (add-to-list 'yas-snippet-dirs (f-join n-nemacs-dir "snippets"))
+         (add-to-list 'yas-snippet-dirs (f-join n-nemacs-dir "yas-snippets"))
          (yas-global-mode 1)))
    #+end_src
 
