--- a/nemacs.org
+++ b/nemacs.org
@@ -156,6 +156,14 @@
        (add-to-list 'default-frame-alist `(font . ,default-font)))
    #+end_src
 
+** Тема =Dracula=
+
+   #+begin_src emacs-lisp
+     (use-package dracula-theme
+       :ensure    t
+       :config    (load-theme 'dracula t))
+   #+end_src
+
 ** Сокрытие верхнего меню, тулбара и скроллбара
 
    Сначала оставил менюбар, чтобы проще было находить границы окна, но во-первых, он выбивается из темы оформления, а во-вторых, границы окна лучше выделить средствами оконного менеджера, так что опять скрываю.
