--- a/nemacs.org
+++ b/nemacs.org
@@ -303,6 +303,19 @@
        :ensure    t
        :bind      (("C-c SPC" . #'ace-jump-mode)))
    #+end_src
+
+** Переключение между окнами с помощью =Ace Window=
+
+   В общем-то схожий с =Ace Jump= воркфлоу для переключения между окнами. Просто переназначаем =C-x o=, который по дефолту используется для переключения на следующее окно. Поскольку правая рука после нажатия =C-x o= находится в позиции =u i o p=, используем эти клавиши в качестве шорткатов для окон.
+
+   #+begin_src emacs-lisp
+     (use-package ace-window
+       :ensure    t
+       :bind      ("C-x o" . #'ace-window)
+       :config
+       (setq aw-keys '(?u ?i ?o ?p ?j ?k ?l ?m)
+             aw-ignore-current t))
+   #+end_src
    
 ** Подсветка парных скобок
    Для лисповых языков, да и не только, переоценить эту функцию очень сложно...
