--- a/nemacs.org
+++ b/nemacs.org
@@ -203,6 +203,14 @@
      (use-package all-the-icons
        :ensure    t)
    #+end_src
+
+   Включим также отображение иконок в =dired=.
+
+   #+begin_src emacs-lisp
+     (use-package all-the-icons-dired
+       :ensure    t
+       :hook      (dired-mode . all-the-icons-dired-mode))
+   #+end_src
    
 ** =Dashboard= в качестве стартового экрана
 
